--- a/sass/components/_carousels.scss
+++ b/sass/components/_carousels.scss
@@ -44,11 +44,50 @@
             padding-top: 1.875rem;
 
             button {
-                font-size: $font-36;
-                margin: 0 20px;
+                @include flex-config($align-items: center, $justify-content: center);
+                background: rgb(255,255,255);
+                background: linear-gradient(90deg, rgba(255,255,255,0.0) 0%, rgba(0,0,0,0.3) 62%, rgba(0,0,0,0.2) 100%);
+                border-radius: 40px;
+                height: 40px;
+                color: transparent;
+                font-size: $font-50;
+                position: absolute;
+                top: 40%;
                 transition: all .4s ease-in-out;
+                width: 40px;
 
-                &:hover { transform: scale(1.2); }
+                &::after {
+                    @include pseudo($display: block, $pos: absolute);
+                    color: $clr-white;
+                    font: {
+                        family: $font-awesome;
+                        size: $font-28;
+                        weight: 900;
+                    }
+                    height: 100%;
+                    left: 1px;
+                    top: 5px;
+                    width: 100%;
+                    transition: all .4s ease-in-out;
+                }
+
+                &:hover { 
+                    transform: scale(1.1);
+
+                    &::after { transform: scale(1.1); }
+                }
+
+                &.owl-prev { 
+                    left: 30px; 
+                    
+                    &::after { content: '\f104'; }
+                }
+
+                &.owl-next { 
+                    right: 30px; 
+                
+                    &::after { content: '\f105'; }
+                }
             }
         }
     }
