--- a/sass/components/_tables.scss
+++ b/sass/components/_tables.scss
@@ -9,9 +9,11 @@
         width: 100%;
 
         .wrapper {
-            margin-bottom: 6.25rem;
+            margin-bottom: 4rem;
             overflow: hidden;
             padding-left: 11.75rem;
+
+            &:last-child { margin-bottom: 0; }
 
             &.onScreen {
                 .title {
